--- a/code-alongs/04_augenarzt/style.css
+++ b/code-alongs/04_augenarzt/style.css
@@ -26,7 +26,16 @@ main {
     border-radius: 9999px;
     position: relative;
     clip-path: ellipse(50% 35% at 50% 50%);
+    transition: clip-path 2000ms ease-out
 }
+    #eye.bloody {
+        background: red;
+    }
+    #eye.closed {
+        clip-path: ellipse(50% 0% at 50% 50%);
+        transition-timing-function: ease-in;
+    }
+
 #pupil {
     width: var(--size-pupil);
     height: var(--size-pupil);
@@ -36,4 +45,10 @@ main {
     left: 50%;
     transform: translate(-50%, -50%);
     border-radius: 50%;
+}
+#pupil.look_right {
+    left: 70%;
+}
+#pupil.look_left {
+    left: 30%;
 }
